# walltime-rs

./: .envrc  .gitignore  .walltime.jsonl  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  justfile  lefthook.yml
.github/workflows/: rust.yml
crates/walltime-cli/: Cargo.toml
crates/walltime-cli/src/: args.rs  main.rs
crates/walltime-core/: Cargo.toml
crates/walltime-core/src/: error.rs  history.rs  lib.rs  phase.rs  runner.rs  summary.rs  timestamp.rs
crates/walltime-core/src/snapshots/: walltime_core__summary__tests__summary_nonzero_exit.snap  walltime_core__summary__tests__summary_simple.snap  walltime_core__summary__tests__summary_with_history.snap  walltime_core__summary__tests__summary_with_phases.snap
nix/: devshell.nix  overlay.nix  packages.nix  treefmt.nix
nix/devshell/: flake-module.nix
nix/rust-overlay/: flake-module.nix
nix/treefmt/: flake-module.nix
