[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sshine/walltime"

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
# Internal crates
walltime-core = { path = "crates/walltime-core" }

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Diagnostics
tracing = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt", "process", "io-util", "macros", "rt-multi-thread"] }

# Regex
regex = "1"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# Colors
owo-colors = "4"

# Dev dependencies
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }
