[package]
name = "walltime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for measuring time spent in a process"

[[bin]]
name = "wtime"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
walltime-core.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
clap.workspace = true
tokio.workspace = true
owo-colors.workspace = true
